# GPU-SLAM-Bot-Starter-Project-ROS2-Cplusplus-CUDA-Gazebo

./: README.md  test_cuda  test_cuda.cu
1_BlankWorld/ws/src/gpu_slam_bot/: CMakeLists.txt  package.xml
1_BlankWorld/ws/src/gpu_slam_bot/launch/: sim.launch.py
1_BlankWorld/ws/src/test_pkg/: package.xml
2_AddRobot/: README.md
2_AddRobot/screenshot/: 2.webm
2_AddRobot/ws/: launch_sim.sh
2_AddRobot/ws/src/gpu_slam_bot/config/: diff_drive_controllers.yaml
2_AddRobot/ws/src/gpu_slam_bot/gpu_slam_bot/: auto_move.py  autonomous_drive.py
2_AddRobot/ws/src/gpu_slam_bot/models/: box.sdf
2_AddRobot/ws/src/gpu_slam_bot/src/: auto_move.cpp  gpu_grid.cu
3_MakeThemSmarter/: .gitignore  README.md
3_MakeThemSmarter/ws/src/gpu_slam_bot/: CMakeLists.txt  package.xml
3_MakeThemSmarter/ws/src/gpu_slam_bot/launch/: sim.launch.py
3_MakeThemSmarter/ws/src/gpu_slam_bot/src/: auto_move.cpp  gpu_slam_node.cpp
3_MakeThemSmarter/ws/src/gpu_slam_bot/urdf/: gpu_slam_bot.urdf  gpu_slam_bot.urdf.xacro
3_MakeThemSmarter/ws/src/gpu_slam_bot/worlds/: empty_lidar.world  maze.world
4_ImprovePusher/: README.md
4_ImprovePusher/ws/src/gpu_slam_bot/: CMakeLists.txt  package.xml
4_ImprovePusher/ws/src/gpu_slam_bot/launch/: sim.launch.py
4_ImprovePusher/ws/src/gpu_slam_bot/models/: box.sdf
4_ImprovePusher/ws/src/gpu_slam_bot/src/: auto_move.cpp  autonomous_gripper_controller.cpp
4_ImprovePusher/ws/src/gpu_slam_bot/urdf/: gpu_slam_bot.urdf  gpu_slam_bot.urdf.xacro
4_ImprovePusher/ws/src/gpu_slam_bot/worlds/: maze.world
5_ImproveInteraction/: README.md
5_ImproveInteraction/ws/: launch_sim.sh
5_ImproveInteraction/ws/src/gpu_slam_bot/: CMakeLists.txt  package.xml
5_ImproveInteraction/ws/src/gpu_slam_bot/launch/: sim.launch.py
5_ImproveInteraction/ws/src/gpu_slam_bot/scripts/: generate_maze_world.py
5_ImproveInteraction/ws/src/gpu_slam_bot/src/: auto_move.cpp  autonomous_gripper_controller.cpp  gpu_slam_node.cpp  move_obstacle.cpp
5_ImproveInteraction/ws/src/gpu_slam_bot/urdf/: gpu_slam_bot.urdf  gpu_slam_bot.urdf.xacro
5_ImproveInteraction/ws/src/gpu_slam_bot/worlds/: maze_generated.world
6_StressTesting/: README.md
6_StressTesting/ws/src/gpu_slam_bot/: package.xml
6_StressTesting/ws/src/gpu_slam_bot/config/: controller.yaml
6_StressTesting/ws/src/gpu_slam_bot/launch/: sim.launch.py
6_StressTesting/ws/src/gpu_slam_bot/models/: box.sdf
6_StressTesting/ws/src/gpu_slam_bot/scripts/: generate_maze_world.py
6_StressTesting/ws/src/gpu_slam_bot/src/: auto_move.cpp  autonomous_gripper_controller.cpp  box_detector.cpp  gpu_slam_node.cpp
6_StressTesting/ws/src/gpu_slam_bot/urdf/: gpu_bot.urdf.xacro  gpu_slam_bot.urdf  gpu_slam_bot.urdf.xacro
6_StressTesting/ws/src/gpu_slam_bot/worlds/: maze_generated.world
7_Basket/: CHANGELOG.md  README.md
7_Basket/ws/: launch_sim.sh
7_Basket/ws/src/gpu_slam_bot/: CMakeLists.txt  package.xml  setup.py
7_Basket/ws/src/gpu_slam_bot/include/gpu_slam_bot/: gpu_grid.hpp
7_Basket/ws/src/gpu_slam_bot/launch/: sim.launch.py
7_Basket/ws/src/gpu_slam_bot/scripts/: generate_maze_world.py
7_Basket/ws/src/gpu_slam_bot/scripts/src/gpu_slam_bot/worlds/: maze_generated.world
7_Basket/ws/src/gpu_slam_bot/src/: auto_lifter.cpp  auto_move.cpp  autonomous_gripper_controller.cpp  box_detector.cpp  gpu_slam_node.cpp
7_Basket/ws/src/gpu_slam_bot/urdf/: gpu_slam_bot.urdf  gpu_slam_bot.urdf.xacro
7_Basket/ws/src/gpu_slam_bot/worlds/: maze_generated.world
Add Robot/ws/src/gpu_slam_bot/: CMakeLists.txt  setup.py
Add Robot/ws/src/gpu_slam_bot/launch/: sim.launch.py
Add Robot/ws/src/gpu_slam_bot/urdf/: gpu_bot.urdf.xacro  gpu_slam_bot.urdf  gpu_slam_bot.urdf.xacro
Add Robot/ws/src/gpu_slam_bot/worlds/: empty_lidar.world
Blank World/: README.md
GPU-SLAM-Bot-Starter-Project-ROS2-Cplusplus-CUDA-Gazebo-main/: README.md
GPU-SLAM-Bot-Starter-Project-ROS2-Cplusplus-CUDA-Gazebo-main/ws/src/gpu_slam_bot/: package.xml
GPU-SLAM-Bot-Starter-Project-ROS2-Cplusplus-CUDA-Gazebo-main/ws/src/gpu_slam_bot/launch/: sim_headless.launch.py
GPU-SLAM-Bot-Starter-Project-ROS2-Cplusplus-CUDA-Gazebo-main/ws/src/gpu_slam_bot/src/: gpu_slam_node.cpp
ws/src/: gpu_slam_node.cpp
ws/src/gpu_slam_bot/: CMakeLists.txt  package.xml
ws/src/gpu_slam_bot/include/gpu_slam_bot/: gpu_grid.hpp
ws/src/gpu_slam_bot/launch/: sim.launch.py
